syntax = "proto3";

package links;

option go_package = "api/handlers";

service LinksService {
  rpc PostFullLink (longLinkRequest) returns (PostFullLinkResponse);
  rpc GetFullLink (shortLinkRequest) returns (GetFullLinkResponse);

}

message PostFullLinkResponse {
  oneof result{
    shortLinkResponse shortLink = 1;
    messageResponse message = 2;
  }
}

message longLinkRequest {
  string longLink = 1;
  
}

message fullLinkResponse {
  string fullLink = 1;
}

message GetFullLinkResponse {
  oneof result {
    fullLinkResponse fullLink = 1;
    messageResponse message = 2;
  }
}

message shortLinkRequest {
  string shortLink = 1;
}

message shortLinkResponse {
  string shortLink = 1;
}
message messageResponse {
  string message = 1;
}
